--- a/settings.gradle
+++ b/settings.gradle
@@ -14,4 +14,4 @@ dependencyResolutionManagement {
 }
 rootProject.name = "PLPaymentGateway"
 include ':paylinkgatewaysdktester'
-include ':PaylinkGatewaySDK'
+include ':Paylink-mobile-android-sdk'
